--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,7 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@mipmap/walkarma"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
@@ -39,7 +39,8 @@
             android:name=".MainMap"
             android:label="@string/title_activity_main_map" />
         <activity android:name=".Profile" />
-        <activity android:name=".dashboard"></activity>
+        <activity android:name=".dashboard" />
+        <activity android:name=".WeeklyReport"></activity>
     </application>
 
 </manifest>
